--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,12 @@
 {% block content %}
     <a href="{{ url_for('create') }}">Add New Task</a>
     <ul>
-        {% for task in tasks %}
-            <li>
-                {{ task.title }}
-                <a href="{{ url_for('update', task_id=task.id) }}">Edit</a>
-                <a href="{{ url_for('delete', task_id=task.id) }}">Delete</a>
-            </li>
-        {% endfor %}
-    </ul>
+{% for task in tasks %}
+  <li>{{ task.title }} - {{ task.status }} - {{ task.priority }}
+       <a href="{{ url_for('update_task', task_id=task.id) }}">Edit</a>
+      <a href="{{ url_for('delete_task', task_id=task.id) }}">Delete</a>
+  </li>
+{% endfor %}
+</ul>
 {% endblock %}
 <!--test-->
